--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,7 +106,7 @@ jobs:
       env:
         CTEST_OUTPUT_ON_FAILURE: 1
   build-macos:
-    runs-on: macos-14
+    runs-on: macos-15
     steps:
     - uses: actions/checkout@v4
       with:
@@ -132,7 +132,7 @@ jobs:
       env:
         CTEST_OUTPUT_ON_FAILURE: 1
   build-windows:
-    runs-on: windows-2022
+    runs-on: windows-2025
     steps:
     - uses: actions/checkout@v4
       with:
@@ -145,8 +145,8 @@ jobs:
         variant: sccache
     - name: Build
       run: |
-        cmake -S . -B build -DCMAKE_C_COMPILER_LAUNCHER=sccache -DCMAKE_CXX_COMPILER_LAUNCHER=sccache
-        cmake --build build --parallel
+        cmake -S . -B build -DCMAKE_C_COMPILER_LAUNCHER=sccache -DCMAKE_CXX_COMPILER_LAUNCHER=sccache -DCMAKE_BUILD_TYPE=Release
+        cmake --build build --parallel --config Release
     - name: Test
       run: |
         cd build
@@ -269,7 +269,7 @@ jobs:
     - name: Verify library integrity
       run: |
        echo "### Library verification ###"
-       file build/bin/opencv_libs/libopencv_imgcodecs.so.4.9.0 | grep "shared object"
+       file build/bin/opencv_libs/libopencv_imgcodecs.so.4.12.0 | grep "shared object"
 
     - name: Run evaluation
       run: |
