--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,15 +137,21 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules: true
-    - name: Setup ccache
-      uses: hendrikmuhs/ccache-action@v1.2
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v2
       with:
-        key: ccache-${{ github.job }}
-        max-size: 2G
-        variant: sccache
+        vs-version: 'latest'
+    - name: Setup ccache
+      uses: Chocobo1/setup-ccache-action@v1
+      with:
+        windows_compile_environment: msvc
+    - name: Setup ninja
+      uses: seanmiddleditch/gha-setup-ninja@v6
+    - name: Setup MSVC for Ninja again
+      uses: ilammy/msvc-dev-cmd@v1
     - name: Build
       run: |
-        cmake -S . -B build -DCMAKE_C_COMPILER_LAUNCHER=sccache -DCMAKE_CXX_COMPILER_LAUNCHER=sccache -DCMAKE_BUILD_TYPE=Release
+        cmake -S . -B build -G Ninja -DCMAKE_C_COMPILER_LAUNCHER=ccache -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_BUILD_TYPE=Release
         cmake --build build --parallel --config Release
     - name: Test
       run: |
