Implement function to find subgraph and change LayerType assignment (#209)

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,6 +1,9 @@
 file(GLOB_RECURSE graph_headers graph/*.h graph/*.hpp)
 set(GRAPH_HEADERS "${graph_headers}" PARENT_SCOPE)
 
+file(GLOB_RECURSE graphT_headers graph_transformations/*.h graph_transformations/*.hpp)
+set(GRAPHT_HEADERS "${graphT_headers}" PARENT_SCOPE)
+
 file(GLOB_RECURSE layers_headers layers/*.h layers/*.hpp)
 set(LAYERS_HEADERS "${layers_headers}" PARENT_SCOPE)
 
