--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(graph)
+add_subdirectory(graph_transformations)
 add_subdirectory(perf)
 add_subdirectory(layers)
 add_subdirectory(Weights_Reader)
