--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "3rdparty/Json"]
 	path = 3rdparty/Json
 	url = https://github.com/nlohmann/json
+[submodule "3rdparty/oneDNN"]
+	path = 3rdparty/oneDNN
+	url = https://github.com/uxlfoundation/oneDNN
