--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,5 @@ add_subdirectory(graph)
 add_subdirectory(graph_transformations)
 add_subdirectory(perf)
 add_subdirectory(layers)
+add_subdirectory(layers_oneDNN)
 add_subdirectory(Weights_Reader)
