--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -32,7 +32,7 @@ jobs:
         key: ccache-${{ github.job }}
     - name: Build
       run: |
-            cmake -S . -B build \
+            cmake -S . -B build -G Ninja  \
             -DCMAKE_C_COMPILER_LAUNCHER=ccache \
             -DCMAKE_CXX_COMPILER_LAUNCHER=ccache \
             -DCMAKE_C_COMPILER=clang \
